--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,12 +9,16 @@ html {
     min-width: 100%;
     box-sizing: border-box;
 }
+.gird__column-2 {
+    width: 100%;
+    display: flex;
+}
 a {
     text-decoration: none;
     color: black;
 }
 .video {
-    width: 1100px;
+    width: 800px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -26,4 +30,8 @@ a {
     to {
         opacity: 1;
     }
+}
+.link-an-vao {
+    text-decoration: underline;
+    color: blue;
 }
