--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -42,11 +42,11 @@
     }
     .gird__column-2 {
         display: block;
-        width: 92%;
+        width: 62%;
     }
     .content_LT {
         margin: 0 20px;
-        width: 54%;
+        width: 82%;
     }
     .container h1 {
         margin-left: 25px;
@@ -54,7 +54,7 @@
         text-align: inherit;
     }
     .content__HD {
-        width: 60%;
+        width: 82%;
     }
     .video {
         width: 90%;
@@ -62,10 +62,12 @@
     .container__note {
         margin-left: 24px;
     }
-    .btn-next {
-            margin: 10px 15px;
+    .BT__output-1 {
+        max-width: 90%;
     }
-    .container__learn  {
-            margin-left: 0px;
+    .BT__noi-dung {
+        width: 90%;
     }
+    
+    
 }
